--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <p>Peak Fitness does not share your data with any third parties. We do not use analytics or tracking services.</p>
     
     <h2>Contact</h2>
-    <p>Questions? Contact us at: tyleredwards1023@gmail.com</p>
+    <p>Questions? Contact us at: nopressureoc@gmail.com</p>
 </body>
 </html>
